# Scratch-CS336-LLM

./: .gitignore  DEEPSPEED_SETUP.md  GPTQ_IMPLEMENTATION_SUMMARY.md  README.md  README_cn.md  TOKENIZER_MERGE_SUMMARY.md  pyproject.toml
clean_llm/demo/: chat.py  web_ui.py
clean_llm/generation/: __init__.py  utils.py
clean_llm/quantize/: README.md  __init__.py  example.py  gptq.py
clean_llm/tokenizer/: README.md  __init__.py  merge_vocab.py
clean_llm/train/: DPO_TRAINING_README.md  __init__.py  dpo_train.py  rm_train.py  sft.py
configs/: dpo_training.yaml  evaluate_cs336_lm.yaml  evaluate_qwen2_5.yaml  grpo_gsm8k.yaml  pretrain_cs336_lm.yaml  pretrain_qwen2_5.yaml  quantization.yaml  rm_training.yaml  sft_gsm8k.yaml  tokenizer.yaml
configs/deepspeed/: README.md  example_usage.sh
data/: README.md  download_owt.sh  download_ts.sh
docs/: ARCHITECTURE.md  DEEPSPEED_SETUP.md  DEMO_USAGE.md  DPO_QUICK_START.md  DPO_TRAINING.md  MERGE_COMPLETION_REPORT.md  MERGE_FEATURES.md  QUANTIZATION.md  RM_TRAINING.md  RM_TRAINING_SUMMARY.md  TOKENIZER.md  TOKENIZER_QUICKSTART.md
examples/: quantize_example.py  tokenizer_workflow.py
scratch_cs336/: utils.py
scripts/: README_RM_TRAINING.md  complete_workflow_example.py  eval_pretrain.py  expand_model_vocab.py  launch_demo.py  merge_tokenizers.py  pretrain.py  process_pretrain_data.py  process_rm_data.py  process_sft_data.py  quantize_model.py  test_dpo_setup.py  tokenize.py  train_dpo.py  train_grpo.py  train_rm.py  train_sft.py  train_tokenizer.py
tests/: test_dpo_setup.py  test_qwen2_5.py
(+34 files in other folders)
