[project]
name = "scratch_cs336"
version = "0.1.0"
description = "LLM training pipeline from scratch (CS336)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.8.1",
    "datasets>=4.0.0,<5",
    "einops>=0.8.1",
    "einx>=0.3.0",
    "jaxtyping>=0.3.2",
    "jsonlines>=4.0.0",
    "mlflow>=3.1.1",
    "omegaconf>=2.3.0",
    "pip>=25.1.1",
    # vllm 0.9.2 registers "aimv2" via AutoConfig.register() without exist_ok;
    # transformers added a native "aimv2" model in 4.54, which collides at import.
    # Keep transformers <4.54 until vllm is upgraded.
    "transformers>=4.53.1,<4.54",
    "vllm>=0.9.2",
]

[project.optional-dependencies]
# DPO / Reward-Model training (scratch_cs336/training/dpo.py, rm.py)
dpo = [
    "peft>=0.7.0",
    "trl>=0.7.0",
]
# GPTQ quantization (scratch_cs336/core/quantize/gptq.py)
quantize = [
    "auto-gptq>=0.7.0",
]
# Streamlit web demo (scratch_cs336/serve/web_ui.py)
serve = [
    "streamlit>=1.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scratch_cs336"]
